<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!-- Application Information -->
    <string name="app_name">Timetable</string>
    <string name="version">Version %s Build %s</string>
    <!-- End Application Information -->

    <!-- Service -->
    <string name="runningInTheBackground">Timetable service is running in the background</string>
    <!-- End Service -->

    <!-- Notification -->
    <string name="serviceNotification">Service Notification</string>
    <string name="subjectNotification">Subject Notification</string>
    <string name="startEndStartTitle">%s start in %dm, %s end in %dm</string>
    <string name="startEndStart">%s will start in %d minutes and %s will end in %d minutes</string>
    <string name="startStartTitle">%s start in %dm</string>
    <string name="startStart">%s will start in %d minutes</string>
    <string name="endStartTitle">%s end in %dm</string>
    <string name="endStart">%s will end in %d minutes</string>
    <!-- End Notification -->

    <!-- Widget -->
    <string name="subjectPreview">Subject Preview</string>
    <!-- End Widget -->

    <!-- About Timetable -->
    <string name="iconDescription">Timetable Icon</string>
    <string name="aboutTimetable">About Timetable</string>
    <string name="developer">Developer</string>
    <string name="featureDesigner">Feature Designer</string>
    <string name="teamMembers">Team Members</string>
    <string name="licenses">Licenses</string>
    <string name="loadingLicense">Loading License</string>
    <string name="viewOnGitHub">View on GitHub</string>
    <string name="errorUrl">Error opening url: %s</string>
    <!-- End About Timetable -->

    <!-- Subject Fragment -->
    <string name="timetable">Timetable</string>
    <string name="noneText">None</string>
    <string name="currentSubject">Current Subject</string>
    <string name="time">Time</string>
    <string name="nextSubject">Next Subject</string>
    <string name="previousSubject">Previous Subject</string>
    <string name="identifier">Identifier</string>
    <string name="teacher">Teacher</string>
    <string name="timezone">Timezone</string>
    <!-- End Subject Fragment -->

    <!-- Settings Fragment -->
    <string name="settings">Settings</string>
    <string name="timeFormat">Time Format</string>
    <string name="dateFormat">Date Format</string>
    <string name="theme">Theme</string>
    <string name="themeSettings">Theme Settings</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="defaultTheme">System Default</string>
    <string name="notification">Notification</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrateDuration">Vibrate Duration</string>
    <string name="milliseconds">%dms</string>
    <string name="earlyNotification">Early Notification</string>
    <string name="startEarly">Start Early</string>
    <string name="endEarly">End Early</string>
    <string name="minute">%dm</string>
    <string name="integerError">Only integer is allowed</string>
    <string name="syncTimetable">Sync Timetable</string>
    <string name="fetchGitHub">Fetching data from GitHub</string>
    <string name="errorFetching">Error while fetching data from GitHub</string>
    <string name="missingTimeProfile">Warning: Missing TimeProfile, loading the default one</string>
    <string name="syncSuccess">Successfully sync Timetable data</string>
    <string name="update">Update</string>
    <string name="clearTimetable">Clear Timetable</string>
    <string name="clearTimetableConfirm">Do you want to clear the Timetable data?</string>
    <string name="ok">OK</string>
    <string name="clearSuccess">Successfully reset Timetable data</string>
    <string name="secretKeyTitle">Secret Key</string>
    <string name="enterSecretKeys">Enter secret keys</string>
    <string name="invalidKey">Invalid Key</string>
    <string name="secret">Secret</string>
    <string name="processingSecretError">Error while processing secret key</string>
    <string name="nullResponseGitHub">Error: Null response from GitHub</string>
    <string name="parsingJSONError">Error while parsing JSON</string>
    <string name="storyText">Secret Story</string>
    <string name="loading">Loading</string>
    <!-- End Settings Fragment -->

    <!-- Edit Timetable Fragment -->
    <string name="editTimetable">Edit Timetable</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="addSubject">Add Subject</string>
    <string name="removeSubject">Remove Subject</string>
    <string name="nullSubjectListError">Internal Error: Null subject list</string>
    <string name="emptySubjectError">Error: Empty subject</string>
    <string name="subject">Subject</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <!-- End Edit Timetable Fragment -->

    <!-- Edit Subject Fragment -->
    <string name="editSubject">Edit Subject</string>
    <string name="allSubject">All Subjects</string>
    <string name="deleteSubject">Delete</string>
    <string name="subjectName">Subject Name</string>
    <string name="subjectIdentifier">Subject Identifier</string>
    <string name="teachers">Teachers</string>
    <string name="addTeacher">Add Teacher</string>
    <string name="removeTeacher">Remove Teacher</string>
    <string name="teacherName">Teacher Name</string>
    <!-- End Edit Subject Fragment -->
</resources>
