<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="always"
    android:scrollbars="vertical"
    tools:viewBindingIgnore="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp">
            <ImageView
                android:id="@+id/timetableIcon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/iconDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_toEndOf="@id/timetableIcon"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:textAppearance="?android:attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/timetableVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItemSecondary"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>
        </RelativeLayout>
        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamMembers" />

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:orientation="vertical">
            <com.khopan.timetable.widgets.CardView
                android:id="@+id/whoOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/profile_who" />

            <com.khopan.timetable.widgets.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/profile_khopan"
                app:TitleText="KHOPAN"
                app:SummaryText="Puthip Nakchan"
                app:isDividerViewVisible="true" />

            <com.khopan.timetable.widgets.CardView
                android:id="@+id/whoTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isDividerViewVisible="true"
                app:IconDrawable="@drawable/profile_who" />

            <com.khopan.timetable.widgets.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/profile_poonpun"
                app:TitleText="Poonpun"
                app:SummaryText="Thee Punpom"
                app:isDividerViewVisible="true" />

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>
        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenses" />

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:orientation="vertical">
            <com.khopan.timetable.widgets.CardView
                android:id="@+id/timetableLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="Apache License 2.0"
                app:SummaryText="@string/app_name" />

            <com.khopan.timetable.widgets.CardView
                android:id="@+id/oneuiprojectLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isDividerViewVisible="true"
                app:TitleText="MIT License"
                app:SummaryText="oneui-core  •  oneui-design" />

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
